// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`defData() > defines a data variable with YAML formatting 1`] = `
[
  {
    "activeTools": [],
    "input": {
      "prompt": [
        {
          "content": "<variables>
  <CFG>
x: 1
'y': 2

  </CFG>
</variables>",
          "role": "system",
        },
        {
          "content": [
            {
              "text": "Use <CFG>",
              "type": "text",
            },
          ],
          "role": "user",
        },
      ],
    },
    "output": {
      "content": [
        {
          "text": "ok",
          "type": "text",
        },
      ],
      "finishReason": "stop",
    },
  },
]
`;

exports[`defData() > handles arrays 1`] = `
[
  {
    "activeTools": [],
    "input": {
      "prompt": [
        {
          "content": "<variables>
  <LIST>
- a
- b
- c

  </LIST>
</variables>",
          "role": "system",
        },
        {
          "content": [
            {
              "text": "Items: <LIST>",
              "type": "text",
            },
          ],
          "role": "user",
        },
      ],
    },
    "output": {
      "content": [],
      "finishReason": "stop",
    },
  },
]
`;

exports[`defData() > handles complex data structures 1`] = `
[
  {
    "activeTools": [],
    "input": {
      "prompt": [
        {
          "content": "<variables>
  <COMPLEX>
users:
  - id: 1
    name: A
  - id: 2
    name: B
config:
  enabled: true
  options:
    - x
    - 'y'

  </COMPLEX>
</variables>",
          "role": "system",
        },
        {
          "content": [
            {
              "text": "<COMPLEX>",
              "type": "text",
            },
          ],
          "role": "user",
        },
      ],
    },
    "output": {
      "content": [],
      "finishReason": "stop",
    },
  },
]
`;

exports[`defData() > handles empty objects 1`] = `
[
  {
    "activeTools": [],
    "input": {
      "prompt": [
        {
          "content": "<variables>
  <EMPTY>
{}

  </EMPTY>
</variables>",
          "role": "system",
        },
        {
          "content": [
            {
              "text": "<EMPTY>",
              "type": "text",
            },
          ],
          "role": "user",
        },
      ],
    },
    "output": {
      "content": [],
      "finishReason": "stop",
    },
  },
]
`;

exports[`defData() > handles nested objects 1`] = `
[
  {
    "activeTools": [],
    "input": {
      "prompt": [
        {
          "content": "<variables>
  <DATA>
user:
  name: Alice
  age: 30
settings:
  theme: dark

  </DATA>
</variables>",
          "role": "system",
        },
        {
          "content": [
            {
              "text": "Config: <DATA>",
              "type": "text",
            },
          ],
          "role": "user",
        },
      ],
    },
    "output": {
      "content": [],
      "finishReason": "stop",
    },
  },
]
`;

exports[`defData() > supports .remind() method 1`] = `[]`;

exports[`defData() > supports .remind() method 2`] = `
[
  {
    "activeTools": [],
    "input": {
      "prompt": [
        {
          "content": "<variables>
  <D>
x: 1

  </D>
</variables>",
          "role": "system",
        },
        {
          "content": [
            {
              "text": "msg",
              "type": "text",
            },
          ],
          "role": "user",
        },
        {
          "content": [
            {
              "text": "

[Reminder: Remember to use the following items in your response:
- D (data variable)
- D (data variable)]",
              "type": "text",
            },
          ],
          "role": "assistant",
        },
      ],
    },
    "output": {
      "content": [],
      "finishReason": "stop",
    },
  },
]
`;
